conformance/tests/udproute-valid-invalid-listeners.yaml
apiVersion: v1
kind: Service
metadata:
  name: udp-echo-mixed-listeners
  namespace: gateway-conformance-infra
  labels:
    app: udp-echo-mixed-listeners
spec:
  selector:
    app: udp-echo-mixed-listeners
  ports:
    - name: udp
      protocol: UDP
      port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: udp-echo-mixed-listeners
  namespace: gateway-conformance-infra
  labels:
    app: udp-echo-mixed-listeners
spec:
  replicas: 1
  selector:
    matchLabels:
      app: udp-echo-mixed-listeners
  template:
    metadata:
      labels:
        app: udp-echo-mixed-listeners
    spec:
      containers:
        - name: udp-echo
          image: registry.k8s.io/gateway-api/echo-basic:v1.5.1
          imagePullPolicy: IfNotPresent
          env:
            - name: UDP_ECHO_SERVER
              value: "1"
            - name: POD_NAME
              valueFrom:
                fieldRef:
                  fieldPath: metadata.name
            - name: NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
            - name: SERVICE_NAME
              value: udp-echo-mixed-listeners
          ports:
            - containerPort: 8080
              protocol: UDP
          resources:
            requests:
              cpu: 10m
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: udp-tcp-listeners-gateway
  namespace: gateway-conformance-infra
spec:
  gatewayClassName: "{GATEWAY_CLASS_NAME}"
  listeners:
    - name: tcp
      protocol: TCP
      port: 9300
      allowedRoutes:
        kinds:
          - kind: TCPRoute
    - name: udp
      protocol: UDP
      port: 5300
      allowedRoutes:
        kinds:
          - kind: UDPRoute
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: UDPRoute
metadata:
  name: udp-route-on-mixed-listener-gateway
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - name: udp-tcp-listeners-gateway
      sectionName: udp
  rules:
    - backendRefs:
        - name: udp-echo-mixed-listeners
          port: 8080
